Add quota check for FileSystem writables rdar://144381471 https://bugs.webkit.org/show_bug.cgi?id=287238
Reviewed by Sihui Liu.

Add a quota check when writing data, and for truncate since truncate can increase the file size.
We also do a zero quota check for other commands to make sure the order of operation is preserved.

Covered by added test.

* LayoutTests/storage/filesystemaccess/writable-quota-expected.txt: Added.
* LayoutTests/storage/filesystemaccess/writable-quota.html: Added.
* Source/WebKit/NetworkProcess/storage/FileSystemStorageError.h:
(WebKit::convertToException):
* Source/WebKit/NetworkProcess/storage/FileSystemStorageError.serialization.in:
* Source/WebKit/NetworkProcess/storage/FileSystemStorageHandle.cpp:
(WebKit::FileSystemStorageHandle::executeCommandForWritableInternal):
(WebKit::FileSystemStorageHandle::executeCommandForWritable):
(WebKit::FileSystemStorageHandle::requestNewCapacityForSyncAccessHandle):
* Source/WebKit/NetworkProcess/storage/FileSystemStorageHandle.h:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::executeCommandForWritable):

Canonical link: https://commits.webkit.org/291304@main

--- a/Source/WebKit/NetworkProcess/storage/FileSystemStorageError.serialization.in
+++ b/Source/WebKit/NetworkProcess/storage/FileSystemStorageError.serialization.in
@@ -31,5 +31,6 @@ enum class WebKit::FileSystemStorageError : uint8_t {
     InvalidState,
     MissingArgument,
     TypeMismatch,
+    QuotaError,
     Unknown
 }
