WebPaymentCoordinatorProxy only needs to run in the Networking process on iOS https://bugs.webkit.org/show_bug.cgi?id=288472 rdar://141212425
Reviewed by Abrar Rahman Protyasha.

When APPLE_PAY_REMOTE_UI is enabled, WebPaymentCoordinatorProxy doesn't need to be brought up in the
UI process.

* Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.messages.in:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didAttachToRunningProcess):

Canonical link: https://commits.webkit.org/291313@main

--- a/Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.messages.in
+++ b/Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.messages.in
@@ -24,6 +24,7 @@
 
 #if ENABLE(APPLE_PAY)
 
+// Currently DispatchedTo=Networking when APPLE_PAY_REMOTE_UI and DispatchedTo=UI when !APPLE_PAY_REMOTE_UI
 [
     DispatchedFrom=WebContent,
     EnabledBy=ApplePayEnabled
