Replace JavaScriptEvaluationResult's IPC format with a structured map https://bugs.webkit.org/show_bug.cgi?id=288788 rdar://145804771
Reviewed by Sihui Liu.

In order to maintain maximum compatibility, we continue to do a roundtrip
through SerializedScriptValue, but we do so now entirely inside the web content
process.  This preserves some strange behavior related to things like blob
serialization which we may want to revisit later, but for now we don't change
any observable behavior.  This is verified by some excellent tests that
I got from Simon Lewis and included in this PR from his work on a slightly
different approach in https://github.com/WebKit/WebKit/pull/40911
Simon's tests are more extensive than anything we've tested before, which is
why they hit several assertions I needed to remove.

The serialization format is a map of identifiers to values of different types
with a root identifier of where to start.  This allows us to preserve pointer
equality of dictionaries that contain each other and keys that are reused as
values and other interesting things.

I also adopt JavaScriptEvaluationResult for the places where the extensions
code deserializes a JavaScript evaluation result, such as
Messages::WebInspectorUIExtensionController::EvaluateScriptForExtension.

* Source/WebKit/Shared/API/APISerializedScriptValue.h:
* Source/WebKit/Shared/JavaScriptEvaluationResult.cpp:
(WebKit::JavaScriptEvaluationResult::toWK const):
* Source/WebKit/Shared/JavaScriptEvaluationResult.h:
(WebKit::JavaScriptEvaluationResult::root const):
(WebKit::JavaScriptEvaluationResult::map const):
(WebKit::JavaScriptEvaluationResult::wireBytes const):
* Source/WebKit/Shared/JavaScriptEvaluationResult.mm:
(WebKit::JavaScriptEvaluationResult::JavaScriptEvaluationResult):
(WebKit::JavaScriptEvaluationResult::toID const):
(WebKit::JavaScriptEvaluationResult::toVariant):
(WebKit::JavaScriptEvaluationResult::addObjectToMap):
(WebKit::roundTripThroughSerializedScriptValue):
(WebKit::convertToObjC):

--- a/Source/WebKit/Shared/JavaScriptEvaluationResult.serialization.in
+++ b/Source/WebKit/Shared/JavaScriptEvaluationResult.serialization.in
@@ -21,5 +21,14 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 class WebKit::JavaScriptEvaluationResult {
+#if PLATFORM(COCOA)
+    WebKit::JSObjectID root()
+    HashMap<WebKit::JSObjectID, std::variant<WebKit::JavaScriptEvaluationResult::NullType, bool, WebKit::CoreIPCNumber, String, Seconds, Vector<WebKit::JSObjectID>, HashMap<WebKit::JSObjectID, WebKit::JSObjectID>>> map()
+#else
     std::span<const uint8_t> wireBytes()
+#endif
 }
+
+#if PLATFORM(COCOA)
+[Nested] enum class WebKit::JavaScriptEvaluationResult::NullType : bool
+#endif
