[cocoa] Explicitly set the minimum TLS version to 1.0 when enabled https://bugs.webkit.org/show_bug.cgi?id=280145 rdar://136185611
Reviewed by Alex Christensen.

The system default minimum TLS version is changing to TLS 1.2. Continue
allowing older protocol versions if the option is enabled.

Original patch by Guoye Zhang

* Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.h:
* Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.serialization.in:
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
(WebKit::SessionSet::initializeEphemeralStatelessSessionIfNeeded):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::parameters):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreConfiguration.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
(TestWebKitAPI::TEST(TLSVersion, DefaultBehavior)):
(TestWebKitAPI::TEST(TLSVersion, NetworkSession)):
(TestWebKitAPI::webViewWithNavigationDelegate):
(TestWebKitAPI::TEST(TLSVersion, LegacySubresources)):
* Tools/TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::HTTPServer::listenerParameters):

Canonical link: https://commits.webkit.org/291333@main

--- a/Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.serialization.in
@@ -112,6 +112,7 @@ enum class WebKit::AllowsCellularAccess : bool;
     String resourceMonitorThrottlerDirectory;
     WebKit::SandboxExtensionHandle resourceMonitorThrottlerDirectoryExtensionHandle;
 #endif
+    bool isLegacyTLSAllowed;
 };
 
 #if USE(SOUP)
