[HDR] Limit the HDR image brightness by applying the CSS dynamic-range-limit when drawing the image https://bugs.webkit.org/show_bug.cgi?id=288424 rdar://145517815
Reviewed by Mike Wyrzykowski.

The dynamic-range-limit property of the RenderStyle will be passed to GraphicsContext
through ImagePaintingOptions.

For now, GraphicsContextCG::drawNativeImageInternal(), will adjust the headroom
before calling CGContextSetEDRTargetHeadroom(). The headroom should be set to
None if dynamic-range-limit is equal to 'standard'. It should be scaled down if
it is equal to `constrainedHigh`. Otherwise it should be used as is.

In future patches, the system frameworks will be used to constrain the image
brightness more properly.

* Source/WebCore/platform/graphics/ImagePaintingOptions.h:
(WebCore::ImagePaintingOptions::dynamicRangeLimit const):
(WebCore::ImagePaintingOptions::setOption):
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImageInternal):
* Source/WebCore/rendering/RenderImage.cpp:
(WebCore::RenderImage::paintIntoRect):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/291347@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -1836,7 +1836,8 @@ enum class WebCore::ContentsFormat : uint8_t {
 #endif
 };
 
-class WebCore::PlatformDynamicRangeLimit {
+header: <WebCore/PlatformDynamicRangeLimit.h>
+[CustomHeader, AdditionalEncoder=StreamConnectionEncoder] class WebCore::PlatformDynamicRangeLimit {
     float m_value;
 };
 
@@ -5284,6 +5285,7 @@ header: <WebCore/ImageTypes.h>
     WebCore::ImageOrientation::Orientation orientation().orientation();
     WebCore::InterpolationQuality interpolationQuality();
     WebCore::Headroom headroom();
+    WebCore::PlatformDynamicRangeLimit dynamicRangeLimit();
 };
 
 [AdditionalEncoder=StreamConnectionEncoder] struct WebCore::FloatSegment {
