[macOS][WebContent] Add sandbox telemetry for file-write https://bugs.webkit.org/show_bug.cgi?id=288809 rdar://145819404
Reviewed by Sihui Liu.

* Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/291352@main

--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -138,7 +138,10 @@
 )
 
 (allow file-read*
-       file-write-data
+    (literal "/dev/null")
+    (literal "/dev/zero"))
+
+(allow file-write-data (with report) (with telemetry)
     (literal "/dev/null")
     (literal "/dev/zero"))
 
@@ -149,11 +152,10 @@
         (literal "/dev/dtracehelper")
         (require-any
             (csr CSR_ALLOW_APPLE_INTERNAL)
-            (csr CSR_ALLOW_UNRESTRICTED_DTRACE)))
-)
+            (csr CSR_ALLOW_UNRESTRICTED_DTRACE))))
 
 ;;; Allow creation of core dumps.
-(allow file-write-create
+(allow file-write-create (with report) (with telemetry)
     (require-all (prefix "/cores/")
         (vnode-type REGULAR-FILE)))
 
@@ -840,7 +842,8 @@
 (define (allow-read-write-directory-and-issue-read-write-extensions path)
     (if path
         (begin
-            (allow file-read* file-write* (subpath path))
+            (allow file-read* (subpath path))
+            (allow file-write* (with report) (with telemetry) (subpath path))
             (allow file-issue-extension (require-all (extension-class "com.apple.app-sandbox.read") (subpath path)))
             (allow file-issue-extension (require-all (extension-class "com.apple.app-sandbox.read-write") (subpath path))))))
 
@@ -943,7 +946,8 @@
 #endif
 
 (read-only-and-issue-extensions (extension "com.apple.app-sandbox.read"))
-(read-write-and-issue-extensions (extension "com.apple.app-sandbox.read-write"))
+(define (read-write-extension-with-telemetry) (with report) (with telemetry) (extension "com.apple.app-sandbox.read-write"))
+(read-write-and-issue-extensions (read-write-extension-with-telemetry))
 
 ;; Allow certain Mach extensions. See <rdar://87850345>.
 (allow mach-lookup
