[macOS] Block Mach lookup sandbox extension in the WebContent process https://bugs.webkit.org/show_bug.cgi?id=288825 rdar://145847470
Reviewed by Sihui Liu.

Block Mach lookup sandbox extension in the WebContent process by adding extra conditions to the sandbox rule.
Unless a specific injected bundle is being used, this Mach lookup will be blocked.

* Source/WebKit/Scripts/process-entitlements.sh:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):
* Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/291355@main

--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -952,7 +952,9 @@
 ;; Allow certain Mach extensions. See <rdar://87850345>.
 (allow mach-lookup
     (require-all
+        (require-not (state-flag "WebProcessDidNotInjectStoreBundle"))
         (extension "com.apple.app-sandbox.mach")
+        (extension "com.apple.webkit.mach-bootstrap")
         (global-name "com.apple.commerce")))
 
 ;; Allow the OpenGL Profiler to attach.
