Add support for match_about_blank and match_origin_as_fallback. https://webkit.org/b/275622 rdar://57613243
Reviewed by Brian Weinstein.

Added support for WebCore::UserScript and WebCore::UserStylesheet to match against the parent
document's URL when the frame is about:blank, data: or blob:.

Hook that up to match_about_blank and match_origin_as_fallback in content_scripts, and
matchOriginAsFallback in registered content scripts.

* Source/WebCore/dom/ExtensionStyleSheets.cpp:
(WebCore::ExtensionStyleSheets::updateInjectedStyleSheetCache const):
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::injectUserScriptImmediately):
* Source/WebCore/page/UserContentTypes.h:
* Source/WebCore/page/UserScript.cpp:
(WebCore::UserScript::UserScript):
* Source/WebCore/page/UserScript.h:
(WebCore::UserScript::UserScript):
(WebCore::UserScript::matchParentFrame const):
* Source/WebCore/page/UserStyleSheet.cpp:
(WebCore::UserStyleSheet::UserStyleSheet):
* Source/WebCore/page/UserStyleSheet.h:
(WebCore::UserStyleSheet::UserStyleSheet):
(WebCore::UserStyleSheet::matchParentFrame const):
* Source/WebKit/Shared/Extensions/WebExtensionDynamicScripts.serialization.in:
* Source/WebKit/Shared/Extensions/WebExtensionRegisteredScriptParameters.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/API/Cocoa/_WKUserStyleSheet.mm:
(-[_WKUserStyleSheet initWithSource:forMainFrameOnly:]):
(-[_WKUserStyleSheet initWithSource:forWKWebView:forMainFrameOnly:includeMatchPatternStrings:excludeMatchPatternStrings:baseURL:level:contentWorld:]):
* Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:
(_WebKitUserStyleSheet::_WebKitUserStyleSheet):
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIScriptingCocoa.mm:
(WebKit::WebExtensionContext::createInjectedContentForScripts):
* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::addInjectedContent):
* Source/WebKit/UIProcess/Extensions/Coc

--- a/Source/WebKit/Shared/Extensions/WebExtensionDynamicScripts.serialization.in
+++ b/Source/WebKit/Shared/Extensions/WebExtensionDynamicScripts.serialization.in
@@ -59,6 +59,8 @@ struct WebKit::WebExtensionRegisteredScriptParameters {
     std::optional<Vector<String>> matchPatterns;
 
     std::optional<bool> allFrames;
+    std::optional<WebCore::UserContentMatchParentFrame> matchParentFrame;
+
     std::optional<bool> persistent;
 
     std::optional<WebKit::WebExtensionContentWorldType> world;
