Handle suppress-HDR notifications for videos https://bugs.webkit.org/show_bug.cgi?id=288690 rdar://145717196
Reviewed by Simon Fraser.

This patch observes notifications or trait changes that
request the application or view to suppress HDR content
in videos (by constraining it).

This signal gets combined with the existing CSS
`dynamic-range-limit` to enforce the minimum of the two
constraints.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _registerForNotifications]):
(-[WKWebView _UITraitHDRHeadroomUsageDidChange]):
Trait change entry point on iOS, forwarded to WebPageProxy.
The initial value is also sent.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setShouldSuppressHDR):
* Source/WebKit/UIProcess/WebPageProxy.h:
Forwarded to WebPage. (To be continued further below...)

* Source/WebKit/UIProcess/WebProcessPool.h:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerNotificationObservers):
(WebKit::WebProcessPool::unregisterNotificationObservers):
Notification entry point on macOS, forwarded to all WebProcess'es.

* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::createWebPage):
(WebKit::WebProcess::setShouldSuppressHDR):
* Source/WebKit/WebProcess/WebProcess.h:
* Source/WebKit/WebProcess/WebProcess.messages.in:
Cache the shouldSuppressHDR flag (for future page creations),
and forward to WebPage's.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setShouldSuppressHDR):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:
Meeting point between iOS trait changes and macOS notifications.
Forward to Page.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::setShouldSuppressHDR):
* Source/WebCore/page/Page.h:
(WebCore::Page::shouldSuppressHDR const):
Store the flag (for use by document and elements).
Notify Document if the flag changed.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::shouldSuppressHDRDidChang

--- a/Source/WebKit/WebProcess/WebPage/WebPage.messages.in
+++ b/Source/WebKit/WebProcess/WebPage/WebPage.messages.in
@@ -46,6 +46,8 @@ messages -> WebPage WantsAsyncDispatchMessage {
     SetObscuredContentInsets(WebCore::FloatBoxExtent obscuredContentInsets)
 #endif
 
+    SetShouldSuppressHDR(bool shouldSuppressHDR)
+
     SetUnderlayColor(WebCore::Color color)
     SetUnderPageBackgroundColorOverride(WebCore::Color underPageBackgroundColorOverride)
 
