Set a default value for HostedBlurMaterialInMediaControlsEnabled https://bugs.webkit.org/show_bug.cgi?id=288853 rdar://145866714
Reviewed by Jer Noble and Aditya Keerthi.

Set a default value for HostedBlurMaterialInMediaControlsEnabled based on
defaultHostedBlurMaterialInMediaControlsEnabled().

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/291388@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3458,7 +3458,7 @@ HostedBlurMaterialInMediaControlsEnabled:
   condition: HAVE(MATERIAL_HOSTING)
   defaultValue:
     WebKit:
-      default: false
+      default: defaultHostedBlurMaterialInMediaControlsEnabled()
     WebKitLegacy:
       default: false
     WebCore:
