Annotate endpoints with PermissionsAPIEnabled flag https://bugs.webkit.org/show_bug.cgi?id=288723 rdar://145754215
Reviewed by Ryosuke Niwa.

Annotate endpoints with PermissionsAPIEnabled flag

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/UIProcess/WebPermissionControllerProxy.messages.in:

Canonical link: https://commits.webkit.org/291400@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5829,6 +5829,7 @@ PermissionsAPIEnabled:
       default: false
     WebCore:
       default: false
+  sharedPreferenceForWebProcess: true
 
 PhotoPickerPrefersOriginalImageFormat:
   type: bool
