--- a/Source/WebKit/UIProcess/WebPermissionControllerProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPermissionControllerProxy.messages.in
@@ -24,7 +24,7 @@
  */
 
 [
-    ExceptionForEnabledBy,
+    EnabledBy=PermissionsAPIEnabled,
     DispatchedFrom=WebContent,
     DispatchedTo=UI
 ]
