[Cocoa] Adopt CASpatialAudioExperience for WebAudio https://bugs.webkit.org/show_bug.cgi?id=288249 rdar://145326961
Reviewed by Andy Estes.

Add support for creating a CASpatialAudioExperience and attaching that
experience to the CoreAudio AudioOutputUnit used by WebAudio.

The number of parameters taken by various AudioDestination subclasses
and strategies has become burdensome, so rather than add an additional
parameter needed for creating a CASpatialAudioExperience, add a new
AudioDestinationCreationOptions struct and use that struct for the
same purposes.

This new AudioDestinationCreationOptions struct will also contain a
sceneIdentifier used to anchor audio generation to a particular screen
location.

However, most audio on Cocoa ports flows through SharedAudioDestination,
which muxes that audio together into a single AudioUnit. Add the
spatialIdentifier as a key in the SharedAudioDestination's internal hash
map, and re-create the destinations adaptor when that destination's
sceneIdentifier changes.

The sceneIdentifier and preference must be passed through to the GPU
process so that it can be accessed by RemoteAudioDestinationManager.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::sceneIdentifierDidChange):
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:
(WebCore::DefaultAudioDestinationNode::createDestination):
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::sceneIdentifierDidChange):
* Source/WebCore/platform/MediaStrategy.h:
* Source/WebCore/platform/audio/AudioDestination.h:
(WebCore::AudioDestination::inputDeviceId const):
(WebCore::AudioDestination::numberOfInputChannels const):
(WebCore::AudioDestination::numberOfOutputChannels const):
(WebCore::AudioDestination::sceneIdentifier const):
(WebCore::AudioDestination::setSceneIdentifier):
(WebCore::AudioDestination::AudioDe

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5980,6 +5980,7 @@ PreferSpatialAudioExperience:
     WebCore:
       default: false
   defaultsOverridable: true
+  sharedPreferenceForWebProcess: true
 
 PrivateClickMeasurementDebugModeEnabled:
   type: bool
